fix france map with Raphael js cf http://stackoverflow.com/questions/16377186/how-to-get-bounding-box-or-rect-getbbox-for-svg-path-in-jquery

--- a/src/app/components/france/france.scss
+++ b/src/app/components/france/france.scss
@@ -8,3 +8,6 @@
 .france .departement.over {
   fill: grey !important;
 }
+.france .image {
+  pointer-events: none;
+}
